Fix responsive view on mobile

--- a/pages/_app.module.css
+++ b/pages/_app.module.css
@@ -3,8 +3,6 @@
   flex-direction: row;
   height: 100%;
   padding: 1rem;
-  max-width: var(--default-width);
-  width: var(--default-width);
 }
 
 .container {
@@ -16,18 +14,21 @@
 
 #content-wrapper {
   flex-direction: row;
+  width: 70%;
 }
 
 @media only screen and (max-width: 600px) {
   .container {
     flex-direction: column;
-    width: 100%;
   }
 
   #content {
     padding: 1rem;
-    max-width: unset;
-    width: unset;
     display: block;
+  }
+
+  #content-wrapper {
+    width: 90%;
+    margin: auto;
   }
 }
